# tak-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: board.rs  board5.rs  board_naive.rs  game.rs  lib.rs  main.rs  piece.rs  point.rs  turn.rs
src/ai/: mod.rs
tests/: ai.rs  board.rs  lib.rs
