[package]
name = "tak"
version = "0.2.2"
authors = ["Matt Wismer <mattwis86@gmail.com>"]
repository = "https://github.com/MattWis/tak-rs.git"
homepage = "https://github.com/MattWis/tak-rs.git"
license = "MIT"
readme = "README.md"
description = "Implementation of Tak (from the Kingkiller Chronicles)"
